AWA-17 #comment updated mobile layout issues, deployed updates to firebase #time 3h

--- a/app/sass/styles/components/faq.sass
+++ b/app/sass/styles/components/faq.sass
@@ -23,3 +23,15 @@ adpt-faq
 		span.answer
 			font-size: $intsize
 			line-height: 100%
+
++MQ($mq-tablet)
+	adpt-faq
+		padding: 2em 7%
+
++MQ($mq-mobile)
+	adpt-faq
+		padding: 2em 5%
+
+		adpt-columns
+			grid-template-columns: 1fr
+			grid-gap: 0
