--- a/app/sass/styles/components/referafriend.sass
+++ b/app/sass/styles/components/referafriend.sass
@@ -36,3 +36,13 @@ adpt-refer-a-friend
 		a.btn
 			display: inline-block
 			margin-top: 1em
+
++MQ($mq-mobile)
+	adpt-refer-a-friend
+		padding: 2em 1em
+
+		p
+			padding: 0 1em
+
+			a
+				font-size: $intsize
