--- a/app/sass/styles/global.sass
+++ b/app/sass/styles/global.sass
@@ -43,6 +43,12 @@ h5
 h6
 	font-size: $intsize
 
+small
+	font-size: $smalltext
+
+	a
+		text-decoration: underline
+
 // form styles
 
 input, select, textarea
