--- a/app/sass/styles/pages/educators.sass
+++ b/app/sass/styles/pages/educators.sass
@@ -130,7 +130,7 @@ main.adpt-educators
         overflow: hidden
 
         adpt-inner
-            background-size: cover
+            background-size: contain
             background-image: url('/static/img/paper.png')
             +material-depth
 
@@ -227,3 +227,6 @@ main.adpt-educators
 
         .adpt-section-headline
             padding: 2em
+        
+        .adpt-educ-faq
+            padding: 1em 1em 0
